--- a/src/views/cart/cart.ejs
+++ b/src/views/cart/cart.ejs
@@ -37,6 +37,9 @@
                 </div>
             </div>
         </section>
+        <!-- Section newsletter -->
+        <%- include("../partials/newsletter") %>
+        <!-- /Section newsletter -->   
     </main>
 
     <!-- Footer -->
