--- a/src/views/other/about.ejs
+++ b/src/views/other/about.ejs
@@ -1,12 +1,190 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Head -->
-<%- include("../partials/head",{title:"Acerca de"}) %>
+<%- include("../partials/head",{title:"Sobre WorkZone"}) %>
 
     <body>
         <!-- Header -->
         <%- include("../partials/header") %>
-            <h1>En construcción</h1>
+            <main>
+                <section class="contact py-5" id="contact">
+                    <div class="row justify-content-center">
+                        <div class="col-6 col-md-6 col-lg-3 mb-4">
+
+                        </div>
+                    </div>
+                </section>
+                <section class="about py-5">
+                    <div class="container">
+                        <!-- Título -->
+                        <header class="text-center mb-4">
+                            <h2 class="fw-bold">¿Cómo ayudas a tus clientes?</h2>
+                        </header>
+                        <!-- Contenido -->
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8 col-md-10">
+                                <p class="text-justify">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                                    voluptates quo nemo neque
+                                    nesciunt similique minus itaque impedit eveniet blanditiis dicta est nam in
+                                    perferendis tenetur,
+                                    error eum dolore doloremque, quasi pariatur sint natus exercitationem mollitia
+                                    veniam!
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Botón centrado -->
+                        <div class="text-center mt-4">
+                            <a href="/sobre-workzone" class="btn btn--secondary">VER MÁS</a>
+                        </div>
+                    </div>
+                </section>
+                <section class="py-5">
+                    <div class="container">
+                        <!-- Título -->
+                        <header class="text-center mb-4">
+                            <h2 class="fw-bold">Tu Equipo</h2>
+                        </header>
+                        <!-- Contenido -->
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8 col-md-10">
+                                <p class="text-justify">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
+                                    voluptates quo nemo neque
+                                    nesciunt similique minus itaque impedit eveniet blanditiis dicta est nam
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="contact py-5" id="contact">
+                    <div class="container">
+                        <!-- Título -->
+                        <header class="text-center mb-4">
+                            <h2 class="fw-bold">Reseñas</h2>
+                        </header>
+                        <!-- Contenido -->
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                                <div class="card border-1 shadow-sm h-100">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consequatur
+                                            exercitationem reprehenderit culpa perspiciatis ab maiores commodi, pariatur
+                                            at
+                                            repellat.
+                                        </p>
+                                    </div>
+                                    <div class="card-footer  align-items-center bg-white border-0">
+                                        <div class="d-flex align-items-center">
+                                            <img src="images/users/male-user1.jpg" alt="Foto del revisor"
+                                                class="rounded-circle me-3" width="50">
+                                            <div class="text-start">
+                                                <p class="fw-bold mb-0">Nombre de usuario</p>
+                                                <p class="text-muted mb-1 small">Número de días de comentario</p>
+                                            </div>
+                                        </div>
+                                        <div class="review__social-icons d-flex justify-content-end gap-2">
+                                            <i class="fa-brands fa-facebook"></i>
+                                            <i class="fa-brands fa-instagram"></i>
+                                            <i class="fa-brands fa-x-twitter"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                                <div class="card border-1 shadow-sm h-100">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                                            consequatur
+                                            exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
+                                            pariatur at
+                                            repellat.
+                                        </p>
+                                    </div>
+                                    <div class="card-footer  align-items-center bg-white border-0">
+                                        <div class="d-flex align-items-center">
+                                            <img src="images/users/female-user1.jpg" alt="Foto del revisor"
+                                                class="rounded-circle me-3" width="50">
+                                            <div class="text-start">
+                                                <p class="fw-bold mb-0">Nombre de usuario</p>
+                                                <p class="text-muted mb-1 small">Número de días de comentario</p>
+                                            </div>
+                                        </div>
+                                        <div class="review__social-icons d-flex justify-content-end gap-2">
+                                            <i class="fa-brands fa-facebook"></i>
+                                            <i class="fa-brands fa-instagram"></i>
+                                            <i class="fa-brands fa-x-twitter"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3 mb-4 ">
+                                <div class="card border-1 shadow-sm h-100">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                                            consequatur
+                                            exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
+                                            pariatur at
+                                            repellat.
+                                        </p>
+                                    </div>
+                                    <div class="card-footer  align-items-center bg-white border-0">
+                                        <div class="d-flex align-items-center">
+                                            <img src="images/users/male-user2.jpg" alt="Foto del revisor"
+                                                class="rounded-circle me-3" width="50">
+                                            <div class="text-start">
+                                                <p class="fw-bold mb-0">Nombre de usuario</p>
+                                                <p class="text-muted mb-1 small">Número de días de comentario</p>
+                                            </div>
+                                        </div>
+                                        <div class="review__social-icons d-flex justify-content-end gap-2">
+                                            <i class="fa-brands fa-facebook"></i>
+                                            <i class="fa-brands fa-instagram"></i>
+                                            <i class="fa-brands fa-x-twitter"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3 mb-4">
+                                <div class="card border-1 shadow-sm h-100">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                                            consequatur
+                                            exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
+                                            pariatur at
+                                            repellat.
+                                        </p>
+                                    </div>
+                                    <div class="card-footer  align-items-center bg-white border-0">
+                                        <div class="d-flex align-items-center">
+                                            <img src="images/users/male-user1.jpg" alt="Foto del revisor"
+                                                class="rounded-circle me-3" width="50">
+                                            <div class="text-start">
+                                                <p class="fw-bold mb-0">Nombre de usuario</p>
+                                                <p class="text-muted mb-1 small">Número de días de comentario</p>
+                                            </div>
+                                        </div>
+                                        <div class="review__social-icons d-flex justify-content-end gap-2">
+                                            <i class="fa-brands fa-facebook"></i>
+                                            <i class="fa-brands fa-instagram"></i>
+                                            <i class="fa-brands fa-x-twitter"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Section newsletter -->
+                <%- include("../partials/newsletter") %>
+                <!-- /Section newsletter -->
+            </main>
+            <%- include("../partials/footer") %>
+            <%- include("../partials/scripts") %>
     </body>
 
 </html>
