--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -208,7 +208,7 @@
                             </div>
                             <!-- Botón centrado -->
                             <div class="text-center mt-4">
-                                <a href="/sobre-nosotros" class="btn btn--secondary">VER MÁS</a>
+                                <a href="/sobre-workzone" class="btn btn--secondary">VER MÁS</a>
                             </div>
                         </div>
                     </section>
@@ -415,9 +415,8 @@
             </main>
             <%- include("../partials/footer") %>
                 <!-- Icon whatsapp -->
-                <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
+
+
                 <!-- /Icon whatsapp -->
                 <!-- Scripts -->
                 <%- include("../partials/scripts") %>
