--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,55 +1,82 @@
-<footer class="footer">
-    <div class="footer__container">
-        <div class="footer__column footer__column--about">
-            <img src="/images/workZone-logo-white.png" alt="Logo de la empresa" class="footer__logo">
-            <p class="footer__text">Proporcionamos equipos y vestimenta de seguridad industrial de la más alta calidad para mantener la seguridad de tu equipo de trabajo.</p>
-        </div>
+<footer class="footer py-5">
+    <div class="container">
+        <div class="row gy-4">
+            <!-- Columna 1: Sobre WorkZone -->
+            <div class="col-12 col-lg-4">
+                <img src="/images/workZone-logo-white.png" alt="Logo de la empresa" class="mb-3 img-fluid">
+                <p class="mb-0">
+                    Proporcionamos equipos y vestimenta de seguridad industrial de la más alta calidad para mantener la seguridad de tu equipo de trabajo.
+                </p>
+            </div>
 
-        <!-- Columna 2: Menú Principal -->
-        <div class="footer__column footer__column--menu">
-            <h3 class="footer__title">MENÚ PRINCIPAL</h3>
-            <ul class="footer__list">
-                <li><a href="#inicio" class="footer__link">Inicio</a></li>                
-                <li><a href="#products" class="footer__link">Productos</a></li>  
-                <li><a href="#about" class="footer__link">Acerca de</a></li>  
-                <li><a href="#contact" class="footer__link">Contacto</a></li>
-            </ul>
-        </div>
+            <!-- Columna 2: Menú Principal -->
+            <div class="col-6 col-lg-2">
+                <h5 class="text-uppercase mb-3">Menú Principal</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/" class="text-white text-decoration-none">Inicio</a></li>
+                    <li><a href="/productos/lista" class="text-white text-decoration-none">Productos</a></li>
+                    <li><a href="/sobre-workzone" class="text-white text-decoration-none">Sobre WorkZone</a></li>
+                    <li><a href="#contact" class="text-white text-decoration-none">Contacto</a></li>
+                </ul>
+            </div>
 
-        <!-- Columna 3: Categorías -->
-        <div class="footer__column footer__column--categories">
-            <h3 class="footer__title">CATEGORÍAS</h3>
-            <ul class="footer__list">
-                <li><a href="#craneana" class="footer__link">Craneana</a></li>
-                <li><a href="#auditiva" class="footer__link">Auditiva</a></li>
-                <li><a href="#respiratoria" class="footer__link">Respiratoria</a></li>
-                <li><a href="#ocular" class="footer__link">Ocular</a></li>
-                <li><a href="#facial" class="footer__link">Facial</a></li>
-            </ul>
-        </div>
+            <!-- Columna 3: Categorías -->
+            <div class="col-6 col-lg-2">
+                <h5 class="text-uppercase mb-3">Categorías</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#craneana" class="text-white text-decoration-none">Craneana</a></li>
+                    <li><a href="#auditiva" class="text-white text-decoration-none">Auditiva</a></li>
+                    <li><a href="#respiratoria" class="text-white text-decoration-none">Respiratoria</a></li>
+                    <li><a href="#ocular" class="text-white text-decoration-none">Ocular</a></li>
+                    <li><a href="#facial" class="text-white text-decoration-none">Facial</a></li>
+                    <li><a href="#facial" class="text-white text-decoration-none">Manos</a></li>
+                    <li><a href="#facial" class="text-white text-decoration-none">Pies</a></li>
+                </ul>
+            </div>
 
-        <div class="footer__column footer__column--industries">
-            <h3 class="footer__title">INDUSTRIAS</h3>
-            <ul class="footer__list">
-                <li><a href="#salud" class="footer__link">Salud</a></li>
-                <li><a href="#petroleo" class="footer__link">Petróleo</a></li>
-                <li><a href="#mineria" class="footer__link">Minería</a></li>
-                <li><a href="#bomberos" class="footer__link">Bomberos</a></li>
-                <li><a href="#agroindustria" class="footer__link">Agroindustria</a></li>
-                <li><a href="#metalúrgica" class="footer__link">Metalúrgica</a></li>
-            </ul>
-        </div>
+            <!-- Columna 4: Industrias -->
+            <div class="col-6 col-lg-2">
+                <h5 class="text-uppercase mb-3">Industrias</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#salud" class="text-white text-decoration-none">Salud</a></li>
+                    <li><a href="#petroleo" class="text-white text-decoration-none">Petróleo</a></li>
+                    <li><a href="#mineria" class="text-white text-decoration-none">Minería</a></li>
+                    <li><a href="#bomberos" class="text-white text-decoration-none">Bomberos</a></li>
+                    <li><a href="#agroindustria" class="text-white text-decoration-none">Agroindustria</a></li>
+                    <li><a href="#metalurgica" class="text-white text-decoration-none">Metalúrgica</a></li>
+                </ul>
+            </div>
 
-        <!-- Columna 4: Redes Sociales -->
-        <div class="footer__column footer__column--social">
-            <h3 class="footer__title">SIGAMOS CONECTADOS</h3>
-            <div class="footer__social-links">
-                <a href="https://facebook.com" class="footer__social-link" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://instagram.com" class="footer__social-link" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://x.com/" class="footer__social-link" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.tiktok.com/" class="footer__social-link" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
-                <a href="https://www.youtube.com" class="footer__social-link" aria-label="Youtube"><i class="fa-brands fa-youtube"></i></a>
+            <!-- Columna 5: Redes Sociales -->
+            <div class="col-6 col-lg-2">
+                <h5 class="text-uppercase mb-3">Sigamos conectados</h5>
+                <div class="d-flex gap-3">
+                    <a href="https://facebook.com" class="text-white" aria-label="Facebook">
+                        <i class="fa-brands fa-facebook fa-lg"></i>
+                    </a>
+                    <a href="https://instagram.com" class="text-white" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram fa-lg"></i>
+                    </a>
+                    <a href="https://x.com" class="text-white" aria-label="X">
+                        <i class="fa-brands fa-x-twitter fa-lg"></i>
+                    </a>
+                    <a href="https://www.tiktok.com" class="text-white" aria-label="TikTok">
+                        <i class="fa-brands fa-tiktok fa-lg"></i>
+                    </a>
+                    <a href="https://www.youtube.com" class="text-white" aria-label="YouTube">
+                        <i class="fa-brands fa-youtube fa-lg"></i>
+                    </a>
+                </div>
             </div>
         </div>
+
+        <!-- Línea horizontal y copyright -->
+        <hr class="my-4 border-light">
+        <div class="text-center">
+            <p class="mb-0">&copy; 2024 WorkZone. Todos los derechos reservados.</p>
+        </div>
     </div>
+    <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon d-flex align-items-center justify-content-center">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </footer>
