--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -61,16 +61,13 @@
             </div>
           </div>
         </section>
+        <!-- Section newsletter -->
+        <%- include("../partials/newsletter") %>
+        <!-- /Section newsletter -->      
       </main>
       <%- include("../partials/footer") %>
-        <!-- Icon whatsapp -->
-        <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
-          <i class="fab fa-whatsapp"></i>
-        </a>
-
-        <!-- Scripts -->
-        <%- include("../partials/scripts") %>
-
+      <!-- Scripts -->
+      <%- include("../partials/scripts") %>
   </body>
 
 </html>
