--- a/src/views/product/list.ejs
+++ b/src/views/product/list.ejs
@@ -42,6 +42,9 @@
                         </ul>
                     </nav>
                 </section>
+                <!-- Section newsletter -->
+                <%- include("../partials/newsletter") %>
+                <!-- /Section newsletter -->
             </main>
             <script>
                 const products = <%- products %>;
@@ -49,11 +52,8 @@
             </script>
             <!-- Footer -->
             <%- include("../partials/footer") %>
-                <!-- Icon whatsapp -->
-                <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon"><i
-                        class="fab fa-whatsapp"></i></a>
-                <!-- Scripts -->
-                <%- include("../partials/scripts") %>
+            <!-- Scripts -->
+            <%- include("../partials/scripts") %>
     </body>
 
 </html>
