--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,102 +1,5 @@
 /* Footer Container */
 .footer {
-    background-color: #222;
-    color: #fff;
-    padding: 40px 20px;
-    font-size: 16px;
-}
-
-.footer__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0px 200px;
-    border-bottom: 1px solid var(--white);
-}
-
-/* Columnas del footer */
-.footer__column {
-    flex: 1 1 100%;
-    margin: 20px 0;
-}
-
-/* Estilos específicos por columna */
-.footer__column--about .footer__logo {
-    width: 150px;
-    margin-bottom: 15px;
-}
-
-.footer__column--about .footer__text {
-    max-width: 200px;
-    font-size: 14px;
-}
-
-.footer__column--menu,
-.footer__column--categories {
-    max-width: 200px;
-}
-
-.footer__title {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-/* Lista de enlaces */
-.footer__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.footer__link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-    line-height: 1.8;
-}
-
-.footer__link:hover {
-    text-decoration: underline;
-}
-
-/* Redes Sociales */
-.footer__column--social .footer__social-links {
-    display: flex;
-    gap: 15px;
-}
-
-.footer__social-link {
-    font-size: 20px;
-    color: #fff;
-}
-
-.footer__social-link:hover {
-    color: #ccc;
-}
-
-@media (max-width: 1023px) {
-
-} 
-
-@media (max-width: 767px) {} 
-/* Responsivo */
-@media (min-width: 768px) {
-    .footer__column {
-        flex: 1 1 25%;
-    }
-
-    .footer__container {
-        flex-wrap: nowrap;
-    }
-}
-
-@media (max-width: 767px) {
-    /*.footer {
-        text-align: center;
-    }
-
-    .footer__column {
-        flex: 1 1 100%;
-    }*/
+    background-color: var(--darkgray)!important;    
+    color: var(--white)!important;
 }
