--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -56,7 +56,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/#reviews">Acerca de</a>
+            <a class="nav-link" href="/#reviews">Sobre WorkZone</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contáctanos</a>
@@ -106,7 +106,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#reviews">Acerca de</a>
+            <a class="nav-link" href="/#reviews">Sobre WorkZone</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contáctanos</a>
