--- a/src/views/partials/newsletter.ejs
+++ b/src/views/partials/newsletter.ejs
@@ -1,12 +1,19 @@
-<section class="newsletter" id="newsletter">
-    <div class="newsletter__header">
-        <h2 class="newsletter__title">Suscríbete a nuestro Newsletter</h2>
-    </div>
-    <div class="newsletter__form-container">
-        <form class="newsletter__form" action="">
-            <input type="email" id="emailNewsLetter" name="emailNewsLetter" class="newsletter__input input"
-                placeholder="Introduzca su correo electrónico" required>
-            <button type="submit" class="newsletter__submit btn btn--secondary">SUSCRÍBETE</button>
-        </form>
+<section class="newsletter py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- Título -->
+            <div class="col-12 col-md-6 text-start mb-4 mb-md-0">
+                <h2 class="fw-bold">Suscríbete a nuestro Newsletter</h2>
+            </div>
+            <!-- Formulario -->
+            <div class="col-12 col-md-6">
+                <form class="d-flex flex-column flex-md-row align-items-stretch newsletter__form gap-2 gap-md-0" action="">
+                    <input type="email" id="emailNewsLetter" name="emailNewsLetter" 
+                        class="newsletter__input input form-control" placeholder="Introduzca su correo electrónico" required>
+                    <button type="submit" class="newsletter__submit btn btn--secondary">SUSCRÍBETE</button>
+                </form>
+            </div>
+        </div>
     </div>
 </section>
+
