--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -16,7 +16,7 @@
                     <li><a href="/" class="text-white text-decoration-none">Inicio</a></li>
                     <li><a href="/productos/lista" class="text-white text-decoration-none">Productos</a></li>
                     <li><a href="/sobre-workzone" class="text-white text-decoration-none">Sobre WorkZone</a></li>
-                    <li><a href="#contact" class="text-white text-decoration-none">Contacto</a></li>
+                    <li><a href="/contacto" class="text-white text-decoration-none">Contacto</a></li>
                 </ul>
             </div>
 
