--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -40,8 +40,8 @@
                   </span></p>
               </section>
               <div class="mb-3">
-                <p><i class="fa-solid fa-download"></i><a href="">FICHA TÉCNICA</a>&nbsp;&nbsp;<i
-                    class="fa-solid fa-download"></i><a href="">CERTIFICACIONES</a></p>
+                <p><i class="fa-solid fa-download"></i>&nbsp;&nbsp;<a href="" class="text-decoration-none text-small text--link">FICHA TÉCNICA</a>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                    class="fa-solid fa-download"></i>&nbsp;&nbsp;<a href="" class="text-decoration-none text-small text--link">CERTIFICACIONES</a></p>                   
               </div>
               <!-- Colores disponibles -->
               <div class="colors-container mt-4">
