--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -59,7 +59,7 @@
             <a class="nav-link" href="/#reviews">Sobre WorkZone</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#contact">Contáctanos</a>
+            <a class="nav-link" href="/contacto">Contáctanos</a>
           </li>
         </ul>
       </div>
@@ -109,7 +109,7 @@
             <a class="nav-link" href="/#reviews">Sobre WorkZone</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#contact">Contáctanos</a>
+            <a class="nav-link" href="/contacto">Contáctanos</a>
           </li>
         </ul>
 
