feat(JIRA-23): add About view using Bootstrap

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,3 +1,13 @@
 .about {
   background-color: var(--yellow);
 }
+
+.text--justify {
+  text-align: justify;
+}
+
+.img--size{
+  max-width: 100px!important; 
+  height: auto!important; 
+  object-fit: cover!important;
+}
