--- a/src/views/other/contact.ejs
+++ b/src/views/other/contact.ejs
@@ -9,7 +9,7 @@
             <section class="contact py-5">
                 <div class="container">
                     <header class="text-center mb-4">
-                        <h2 class="fw-bold">Contacto</h2>
+                        <h2 class="fw-bold">Contáctanos</h2>
                     </header>
                     <div class="row g-4">
                         <!-- Formulario de contacto -->
