feat(JIRA-23): update Reviews using Bootstrap and add JSON files (reviews, roles, users, categories)

--- a/src/views/other/about.ejs
+++ b/src/views/other/about.ejs
@@ -121,7 +121,7 @@
                         </div>
                         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
                             <div class="mb-4">
-                                <div class="card shadow-sm h-100 border-0">
+                                <div class="card h-100 border-0">
                                     <div class="card-body d-flex flex-column align-items-center p-0">
                                         <div class="d-flex justify-content-center mb-3 ">
                                             <img src="images/users/male-user1.jpg" alt="Foto del revisor"
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                             <div class="mb-4">
-                                <div class="card shadow-sm h-100 border-0">
+                                <div class="card h-100 border-0">
                                     <div class="card-body d-flex flex-column align-items-center p-0">
                                         <div class="d-flex justify-content-center mb-3 ">
                                             <img src="images/users/female-user1.jpg" alt="Foto del revisor"
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                             <div class="mb-4">
-                                <div class="card shadow-sm h-100 border-0">
+                                <div class="card h-100 border-0">
                                     <div class="card-body d-flex flex-column align-items-center p-0">
                                         <div class="d-flex justify-content-center mb-3 ">
                                             <img src="images/users/male-user2.jpg" alt="Foto del revisor"
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                             <div class="mb-4">
-                                <div class="card shadow-sm h-100 border-0">
+                                <div class="card h-100 border-0">
                                     <div class="card-body d-flex flex-column align-items-center p-0">
                                         <div class="d-flex justify-content-center mb-3 ">
                                             <img src="images/users/female-user2.jpg" alt="Foto del revisor"
