--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -222,130 +222,69 @@
                             </header>
                             <!-- Contenido -->
                             <div class="row justify-content-center">
-                                <div class="col-12 col-md-6 col-lg-3 mb-4">
-                                    <div class="card border-1 shadow-sm h-100">
-                                        <div class="card-body">
-                                            <p class="card-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consequatur
-                                                exercitationem reprehenderit culpa perspiciatis ab maiores commodi, pariatur at
-                                                repellat.
-                                            </p>
-                                        </div>
-                                        <div class="card-footer  align-items-center bg-white border-0">
-                                            <div class="d-flex align-items-center">
-                                                <img src="images/users/male-user1.jpg" alt="Foto del revisor"
-                                                    class="rounded-circle me-3" width="50">
-                                                <div class="text-start">
-                                                    <p class="fw-bold mb-0">Nombre de usuario</p>
-                                                    <p class="text-muted mb-1 small">Número de días de comentario</p>
+                                <% reviews.forEach(r=> { %>
+                                    <div class="col-12 col-md-6 col-lg-3 mb-4">
+                                        <div class="card border-1 shadow-sm h-100">
+                                            <div class="card-body">
+                                                <div class="rating-stars my-2">
+                                                    <% for (let i=1; i <=5; i++) { %>
+                                                        <i
+                                                            class="fa-star <%= i <= r.rating ? 'fas text-warning' : 'far text-secondary' %>"></i>
+                                                        <% } %>
                                                 </div>
+                                                <p class="card-text">
+                                                    <%= r.comment%>
+                                                </p>
                                             </div>
-                                            <div class="review__social-icons d-flex justify-content-end gap-2">
-                                                <i class="fa-brands fa-facebook"></i>
-                                                <i class="fa-brands fa-instagram"></i>
-                                                <i class="fa-brands fa-x-twitter"></i>
-                                            </div>
+                                            <% const user=users.find(u=> u.id === r.user_id);
+                                                if (user) { %>
+                                                <div class="card-footer  align-items-center bg-white border-0">
+                                                    <div class="d-flex align-items-center">
+
+                                                        <img src="images/users/<%=user.profileImage%>"
+                                                            alt="<%=user.userName%>" class="rounded-circle me-3"
+                                                            width="50">
+                                                        <div class="text-start">
+                                                            <p class="fw-bold mb-0">
+                                                                <%= user.userName %>
+                                                            </p>
+                                                            <p class="text-muted mb-1 small">
+                                                                <%= timeSince(r.created_at) %>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="review__social-icons d-flex justify-content-end gap-2">
+                                                        <% if (user.socialMedia?.facebook) { %>
+                                                            <a href="<%= user.socialMedia.facebook %>" target="_blank" class="text-decoration-none">
+                                                                <i class="fa-brands fa-facebook text--link"></i>
+                                                            </a>                     
+                                                        <% } %>
+                                                        <% if (user.socialMedia?.instagram){ %>
+                                                            <a href="<%= user.socialMedia.instagram %>" target="_blank" class= "text-decoration-none">
+                                                                <i class="fa-brands fa-instagram text--link"></i>
+                                                            </a>
+                                                        <% } %>
+                                                        <% if (user.socialMedia?.x){%>
+                                                            <a href="<%= user.socialMedia.x %>" target="_blank" class= "text-decoration-none">
+                                                                <i class="fa-brands fa-x-twitter text--link"></i>
+                                                            </a>
+                                                        <% } %>
+                                                    </div>
+                                                </div>
+                                                <% } %>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-3 mb-4">
-                                    <div class="card border-1 shadow-sm h-100">
-                                        <div class="card-body">
-                                            <p class="card-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-                                                consequatur
-                                                exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
-                                                pariatur at
-                                                repellat.
-                                            </p>
-                                        </div>
-                                        <div class="card-footer  align-items-center bg-white border-0">
-                                            <div class="d-flex align-items-center">
-                                                <img src="images/users/female-user1.jpg" alt="Foto del revisor"
-                                                    class="rounded-circle me-3" width="50">
-                                                <div class="text-start">
-                                                    <p class="fw-bold mb-0">Nombre de usuario</p>
-                                                    <p class="text-muted mb-1 small">Número de días de comentario</p>
-                                                </div>
-                                            </div>
-                                            <div class="review__social-icons d-flex justify-content-end gap-2">
-                                                <i class="fa-brands fa-facebook"></i>
-                                                <i class="fa-brands fa-instagram"></i>
-                                                <i class="fa-brands fa-x-twitter"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-3 mb-4 ">
-                                    <div class="card border-1 shadow-sm h-100">
-                                        <div class="card-body">
-                                            <p class="card-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-                                                consequatur
-                                                exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
-                                                pariatur at
-                                                repellat.
-                                            </p>
-                                        </div>
-                                        <div class="card-footer  align-items-center bg-white border-0">
-                                            <div class="d-flex align-items-center">
-                                                <img src="images/users/male-user2.jpg" alt="Foto del revisor"
-                                                    class="rounded-circle me-3" width="50">
-                                                <div class="text-start">
-                                                    <p class="fw-bold mb-0">Nombre de usuario</p>
-                                                    <p class="text-muted mb-1 small">Número de días de comentario</p>
-                                                </div>
-                                            </div>
-                                            <div class="review__social-icons d-flex justify-content-end gap-2">
-                                                <i class="fa-brands fa-facebook"></i>
-                                                <i class="fa-brands fa-instagram"></i>
-                                                <i class="fa-brands fa-x-twitter"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-3 mb-4">
-                                    <div class="card border-1 shadow-sm h-100">
-                                        <div class="card-body">
-                                            <p class="card-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-                                                consequatur
-                                                exercitationem reprehenderit culpa perspiciatis ab maiores commodi,
-                                                pariatur at
-                                                repellat.
-                                            </p>
-                                        </div>
-                                        <div class="card-footer  align-items-center bg-white border-0">
-                                            <div class="d-flex align-items-center">
-                                                <img src="images/users/male-user1.jpg" alt="Foto del revisor"
-                                                    class="rounded-circle me-3" width="50">
-                                                <div class="text-start">
-                                                    <p class="fw-bold mb-0">Nombre de usuario</p>
-                                                    <p class="text-muted mb-1 small">Número de días de comentario</p>
-                                                </div>
-                                            </div>
-                                            <div class="review__social-icons d-flex justify-content-end gap-2">
-                                                <i class="fa-brands fa-facebook"></i>
-                                                <i class="fa-brands fa-instagram"></i>
-                                                <i class="fa-brands fa-x-twitter"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                    <% }); %>
                             </div>
                         </div>
                     </section>
                     <!-- /Section review -->
-                   
+
                     <!-- Section newsletter -->
                     <%- include("../partials/newsletter") %>
                         <!-- /Section newsletter -->
             </main>
             <%- include("../partials/footer") %>
-                <!-- Icon whatsapp -->
-
-
-                <!-- /Icon whatsapp -->
                 <!-- Scripts -->
                 <%- include("../partials/scripts") %>
     </body>
